force-app/main/default/objects/Commission_Formula__c/Commission_Formula__c.object-meta.xml
<CustomObject>
    <description>Custom formula definitions for commission calculations. Child of Incentive Plan Template, supports safe expression evaluation with variable binding, conditions, and multiple result types.</description>
    <label>Commission Formula</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Commission Formula Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>