force-app/main/default/objects/Commission_Formula__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <description>JSON array of conditions that must ALL be true for the formula to apply. Example: [{"field": "Type", "operator": "equals", "value": "Software"}, {"field": "Amount", "operator": "greaterThan", "value": 10000}]</description>
    <label>Conditions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>