force-app/main/default/objects/Commission_Formula__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what this formula calculates and when it applies.</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>