force-app/main/default/objects/Commission_Formula__c/fields/Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>Error_Handling__c</fullName>
    <description>How to handle formula evaluation errors. Use_Fallback applies the Fallback Rate, Skip ignores the formula, Alert_Admin sends a notification.</description>
    <label>Error Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use_Fallback</fullName>
                <default>true</default>
                <label>Use Fallback</label>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>Alert_Admin</fullName>
                <label>Alert Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>