force-app/main/default/objects/Commission_Formula__c/fields/Fallback_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Rate__c</fullName>
    <description>If formula evaluation fails, use this rate as a fallback. Only applies when Error Handling is set to Use_Fallback.</description>
    <label>Fallback Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>