force-app/main/default/objects/Commission_Formula__c/fields/Formula_Expression__c.field-meta.xml
<CustomField>
    <fullName>Formula_Expression__c</fullName>
    <description>The formula expression in a safe expression language. Supports arithmetic, comparisons, IF/THEN/ELSE, and functions (MIN, MAX, ABS, ROUND). Example: (Amount - COGS__c) * 0.05 * IF(Term_Months__c > 12, 1.1, 1.0)</description>
    <label>Formula Expression</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>