force-app/main/default/objects/Commission_Formula__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <description>Human-readable name for this formula, e.g. "Standard Software Commission" or "Services Margin Calc".</description>
    <label>Formula Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>