force-app/main/default/objects/Commission_Formula__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this formula is active and should be evaluated.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>