force-app/main/default/objects/Commission_Formula__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <description>Master-detail relationship to the parent Incentive Plan Template.</description>
    <label>Plan Template</label>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Custom Formulas</relationshipLabel>
    <relationshipName>Custom_Formulas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>