force-app/main/default/objects/Commission_Formula__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <description>What the formula produces: a flat commission amount, a commission rate, or a commissionable value to apply a rate against.</description>
    <label>Result Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission_Amount</fullName>
                <label>Commission Amount</label>
            </value>
            <value>
                <fullName>Commission_Rate</fullName>
                <label>Commission Rate</label>
            </value>
            <value>
                <fullName>Commissionable_Value</fullName>
                <label>Commissionable Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>