force-app/main/default/objects/Commission_Formula__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Evaluation order for formulas. Lower numbers evaluate first. The first matching formula wins.</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>