force-app/main/default/objects/Commission_Formula__c/fields/Test_Input__c.field-meta.xml
<CustomField>
    <fullName>Test_Input__c</fullName>
    <description>JSON test data for formula validation. Admins can test formulas before activating them by providing sample variable values.</description>
    <label>Test Input</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>