force-app/main/default/objects/Commission_Formula__c/fields/Variables__c.field-meta.xml
<CustomField>
    <fullName>Variables__c</fullName>
    <description>JSON array defining the variables used in the formula. Each entry specifies name, source field, and type. Example: [{"name": "Amount", "source": "Pipeline.Amount", "type": "currency"}]</description>
    <label>Variables</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>